# tms-kit

./: .buildinfo  CHANGELOG.md  README.md  basic_usage.html  genindex.html  index.html  objects.inv  pyproject.toml  reproductions.html  search.html  searchindex.js  train_tms.py
.doctrees/: basic_usage.doctree  environment.pickle  index.doctree  reproductions.doctree
.github/workflows/: release.yaml  tests.yaml
_sources/: basic_usage.rst.txt  index.rst.txt  reproductions.rst.txt
docs/: basic_usage.rst  conf.py  index.rst  setup.md
experiments/: bottleneck_tms.py
experiments/bottleneck_tms/: animation-reconstructions.html  run.py  sae_latent_training_history_no_resample.html  sae_latent_training_history_simple_resample.html
experiments/demo/: run.py
experiments/feature_absorption/: README.md  run.py
tests/: test_init.py  test_sae.py
tms/: data.py  loss.py  model.py  optimize.py  sae.py  tms.py
tms/utils/: device.py  plotly.py  utils.py
tms_kit/: data.py  model.py  optimize.py  sae.py  tms.py
tms_kit/utils/: utils.py
